<?xml version="1.0"?>
<package format="2">
  <name>pub_sub_comm</name>
  <version>0.1.0</version>
  <description>A package containing two nodes: one that publishes dummy messages to a topic, the other subscribes to the same topic and Logs those messages</description>

  <maintainer email="sd13535@outlook.com">Sandip Das</maintainer>


  <license>BSD</license>


  <url type="website">https://github.com/real-Sandip-Das/pub_sub_comm</url>
  <url type="bugtracker">https://github.com/real-Sandip-Das/pub_sub_comm/issues</url>

  <author email="sd13535@outlook.com">Sandip Das</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
</package>
